infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: safargo-ingress
  namespace: safargo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: safargo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: safargo-backend
                port:
                  number: 8080
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: safargo-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: safargo-frontend
                port:
                  number: 80
